--- a/packages/canon/src/components/TextField/TextField.styles.css
+++ b/packages/canon/src/components/TextField/TextField.styles.css
@@ -65,6 +65,7 @@
   width: 1.5rem;
   height: 1.5rem;
   color: var(--canon-fg-primary);
+  flex-shrink: 0;
 }
 
 .canon-TextFieldInput {
@@ -78,6 +79,11 @@
   width: 100%;
   height: 100%;
   cursor: inherit;
+  padding: 0;
+}
+
+.canon-TextFieldInput:not([data-filled]):has(+ .canon-TextFieldClearButton) {
+  padding-right: 1.25rem;
 }
 
 .canon-TextFieldInput[type='search']::-webkit-search-cancel-button,
@@ -87,10 +93,12 @@
 
 .canon-TextFieldClearButton {
   display: none;
-  padding: 0 0 0 var(--canon-space-1);
+  padding: 0;
+  margin-left: var(--canon-space-1);
   background: none;
   border: none;
   vertical-align: middle;
+  color: var(--canon-fg-primary);
 }
 
 .canon-TextFieldInput[data-filled] + .canon-TextFieldClearButton {
